--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.1",
     "file-loader": "^3.0.1",
+    "http": "0.0.0",
     "mongoose": "^5.4.20",
     "morgan": "^1.9.1",
     "node-sass": "^4.11.0",
@@ -29,6 +30,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "sass-loader": "^7.1.0",
     "single-spa": "^4.2.0",
     "single-spa-react": "^2.10.0",
@@ -51,6 +54,5 @@
     "webpack-cli": "^3.3.0",
     "webpack-combine-loaders": "^2.0.4",
     "webpack-dev-server": "^3.2.1"
-  },
-  "proxy": "http://localhost:3000"
+  }
 }
