--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
+    "http-proxy-middleware": "^0.19.1",
     "jsx-loader": "^0.13.2",
     "lodash": "^4.17.11",
     "webpack": "^4.29.6",
